[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "method-tools"
version = "0.1.0"
description = "Per-instance LRU caching for methods — a drop-in replacement for functools.lru_cache that avoids memory leaks."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Martin Koistinen" },
]
keywords = ["cache", "lru", "method", "descriptor", "memory-leak"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/mkoistinen/method-tools"
Repository = "https://github.com/mkoistinen/method-tools"
Issues = "https://github.com/mkoistinen/method-tools/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff>=0.11,<0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["method_tools"]

[tool.pytest.ini_options]
testpaths = ["method_tools/tests"]
